--- a/Interface/interface/views/team.pug
+++ b/Interface/interface/views/team.pug
@@ -2,8 +2,9 @@ extends layout
 
 block content
   .main.container
-    h1= title
-    h2 ALUNO1
-    h2 ALUNO2
-    h2 ALUNO3
-    h2 ALUNO4
+    h1 Team
+    br
+    h4 PG3714 Diego Porto
+    h4 A63129 José Duarte Freitas
+    h4 A78764 Ricardo Neves
+    h4 A79947 Rui Costa
