--- a/Interface/interface/views/register.pug
+++ b/Interface/interface/views/register.pug
@@ -36,3 +36,6 @@ block content
                 input(type='password' class='form-control' name='password' id='password' placeholder='*******')     
           div.form-group
             button.btn.btn-primary(type='submit' style='width:100%;') Register
+            
+        a(href='/auth/register/antlr')
+          button.btn.btn-secondary(style='width:100%; padding-top:10px;') Register with ANTLR
