--- a/Interface/interface/views/team.pug
+++ b/Interface/interface/views/team.pug
@@ -5,6 +5,17 @@ block content
     h1 Team
     br
     h4 PG3714 Diego Porto
+    h6 
+      i pg3714@alunos.uminho.pt
+    br
     h4 A63129 José Duarte Freitas
+    h6 
+      i a63129@alunos.uminho.pt
+    br
     h4 A78764 Ricardo Neves
+    h6 
+      i a78764@alunos.uminho.pt
+    br
     h4 A79947 Rui Costa
+    h6 
+      i a79947@alunos.uminho.pt
