--- a/Interface/interface/views/profile.pug
+++ b/Interface/interface/views/profile.pug
@@ -14,8 +14,21 @@ block content
         
         <!-- Modal body -->
         div(class="modal-body")
-          
-                button.btn.btn-primary(type='submit' style='width:100%;') Send
+          form(action='/users/myProfile/change/name' method='POST')
+            div
+              label(for='text' class='cols-sm-2 control-label') New name:
+                input(type='text' class='form-control' name='name' id='name')  
+              button.btn.btn-primary(type='submit' style='width:30%') Change name
+          form(action='/users/myProfile/change/name' method='POST')
+            div
+              label(for='text' class='cols-sm-2 control-label') New email:
+                input(type='text' class='form-control' name='email' id='email')  
+              button.btn.btn-primary(type='submit' style='width:30%') Change email
+          form(action='/users/myProfile/change/name' method='POST')
+            div
+              label(for='text' class='cols-sm-2 control-label') New password:
+                input(type='password' class='form-control' name='password' id='password')  
+              button.btn.btn-primary(type='submit' style='width:30%') Change password
         <!-- Modal footer -->
         div(class="modal-footer")
           button(type="button" class="btn btn-danger" data-dismiss="modal") Close
@@ -27,32 +40,51 @@ block content
       .col-md-3
         .card(style='margin-top: 1rem')
           .card-block
-            h4.card-title=profile.name
+            h4.card-title
+              b=profile.name
           ul.list-group.list-group-flush
             li.list-group-item=profile.number
             li.list-group-item=profile.email
           .card-block
-            button.list-group-item.list-group-item-action(type='button' data-toggle="modal" data-target="#editProfile") Edit profile
+            button.btn.btn-primary(type='button' data-toggle="modal" data-target="#editProfile") Edit Profile
 
-    
+      <!-- Feed -->
+      //publicação      
+      .col-md-6.gedf-main
+        
+      
+        //feed
+        
+        .card(style='margin-top: 2rem')
+          each p in feed
+            if p.author == profile.number
+              .card-header
+                .row
+                  .col-md-1
+                    img.rounded-circle(width='45', height='45', src='../images/wp1.jpg')
+                  .col-md-6
+                    .h5= p.authorName
+                    .h7.text-muted(style='font-size: 0.8rem')=p.author
+              .card-block
+                .h7.text-muted(style='font-size: 0.8rem; margin-bottom: 1rem')
+                  i.fa.fa-clock-o=p.date
+                  |
+                h5.card-title(style='color:#417aba')=p.title
+                p.card-text=p.text
+                  | 
       //grupos e eventos        
-      .col-md-9
-        .card(style='margin-top: 1rem')
-          .card-block
-              h4 Create
-        .list-group
-          button.list-group-item.list-group-item-action(type='button' data-toggle="modal" data-target="#newPub") Publication
-          button.list-group-item.list-group-item-action(type='button' data-toggle="modal" data-target="#newEvent") Event
-          button.list-group-item.list-group-item-action(type='button' data-toggle="modal" data-target="#newGroup") Group
+      .col-md-3
         .card(style='margin-top: 1rem')  
           .card-block
-            h4 Grupos
+            h4
+              b Groups
         .list-group
           each g in profile.groups
             button.list-group-item.list-group-item-action(type='button')=g
         .card(style='margin-top: 1rem')
           .card-block
-            h4 Eventos
+            h4 
+              b Events
         .list-group
           each e in profile.events
             button.list-group-item.list-group-item-action(type='button')=e
