New publications fixed. Visual improvements in feed and profiles.

--- a/Interface/interface/views/navbar.pug
+++ b/Interface/interface/views/navbar.pug
@@ -24,5 +24,5 @@ nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
                     div(class='d-flex justify-content-center h-100')
                         div(class='searchbar')
                             input.nav-item(class='search_input' type='text' name='search' placeholder='Search')
-                            a.nav-item(href='?' class='search_icon')
-                                i(class='fas fa-search' name='search')
+                            a.nav-item(href='-query' class='search_icon')
+                                i(type='submit' class='fas fa-search' name='search')
