--- a/Interface/interface/views/feed.pug
+++ b/Interface/interface/views/feed.pug
@@ -147,6 +147,7 @@ block content
           .card-block
             a.card-link(href='/users/myProfile') 
               b My Profile
+        img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:410px; display: inline-block;' class='img-fluid')
       //publicação      
       .col-md-6.gedf-main
         
@@ -154,12 +155,12 @@ block content
         //feed
         
         each p in feed
-          .card(style='margin-top: 1rem')
-            if (userI.groups.includes(p.target) || userI.events.includes(p.target) || p.target == "public")
+          if (userI.groups.includes(p.target) || userI.events.includes(p.target) || p.target == "public")
+            .card(style='margin-top: 1rem')
               .card-header
                 .row
                   .col-md-1
-                    img.rounded-circle(width='45', height='45', src='../images/wp1.jpg')
+                    img.rounded-circle(width='45', height='45', src='https://img.favpng.com/17/7/13/computer-icons-icon-design-user-png-favpng-uXME5zjHwHTJNs2Kzf5LvgFDR.jpg')
                   .col-md-6
                     .h5= p.authorName
                     .h7.text-muted(style='font-size: 0.8rem')=p.author
@@ -176,22 +177,22 @@ block content
           .card-block
               h4 
                 b Create
-        .list-group
-          button.list-group-item.list-group-item-action(type='button' data-toggle="modal" data-target="#newPub") Publication
-          button.list-group-item.list-group-item-action(type='button' data-toggle="modal" data-target="#newEvent") Event
-          button.list-group-item.list-group-item-action(type='button' data-toggle="modal" data-target="#newGroup") Group
+          .list-group
+            button.list-group-item.list-group-item-action(type='button' data-toggle="modal" data-target="#newPub") Publication
+            button.list-group-item.list-group-item-action(type='button' data-toggle="modal" data-target="#newEvent") Event
+            button.list-group-item.list-group-item-action(type='button' data-toggle="modal" data-target="#newGroup") Group
         .card(style='margin-top: 1rem')  
           .card-block
             h4
               b Groups
-        .list-group
-          each g in userI.groups
-            button.list-group-item.list-group-item-action(type='button')=g
+          .list-group
+            each g in userI.groups
+              button.list-group-item.list-group-item-action(type='button')=g
         .card(style='margin-top: 1rem')
           .card-block
             h4 
               b Events
-        .list-group
-          each e in userI.events
-            button.list-group-item.list-group-item-action(type='button')=e
+          .list-group
+            each e in userI.events
+              button.list-group-item.list-group-item-action(type='button')=e
             
