Updated creation of publications (date of creation). Searchbar now fully working. To Do list updated.

--- a/Interface/interface/views/feed.pug
+++ b/Interface/interface/views/feed.pug
@@ -134,6 +134,7 @@ block content
   <!-- Feed -->
   br
   br
+  br
   .container-fluid
     .row
       //perfil
@@ -147,7 +148,7 @@ block content
           .card-block
             a.card-link(href='/users/myProfile') 
               b My Profile
-        img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:410px; display: inline-block;' class='img-fluid')
+        img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:94%; display: inline-block;' class='img-fluid')
       //publicação      
       .col-md-6.gedf-main
         
@@ -164,7 +165,7 @@ block content
                   .col-md-6
                     .h5
                       b= p.authorName
-                    .h7.text-muted(style='font-size: 0.8rem')=p.author
+                    .h7.text-muted(style='font-size: 0.8rem')='@' + p.author
               .card-block
                 .h7.text-muted(style='font-size: 0.8rem; margin-bottom: 1rem')
                   i.fa.fa-clock-o=p.date
@@ -173,6 +174,13 @@ block content
                   b=p.title
                 p.card-text=p.text
                   | 
+                .h7.text-muted(style='font-size: 0.7rem') 
+                  h7
+                    div
+                      b Tags: 
+                      h7= p.tags
+                  h7= '@' + p.target
+                  |
       //grupos e eventos        
       .col-md-3
         .card(style='margin-top: 1rem')
