--- a/Interface/interface/views/profile.pug
+++ b/Interface/interface/views/profile.pug
@@ -37,6 +37,7 @@ block content
   .container-fluid
     br
     br
+    br
     .row
       //perfil
       .col-md-3
@@ -49,7 +50,7 @@ block content
             li.list-group-item=profile.email
           .card-block
             button.btn.btn-primary(type='button' data-toggle="modal" data-target="#editProfile") Edit Profile
-        img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:410px; display: inline-block;' class='img-fluid')
+        img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:94%; display: inline-block;' class='img-fluid')
 
       <!-- Feed -->
       //publicação      
@@ -67,15 +68,20 @@ block content
                   .col-md-6
                     .h5
                       b= p.authorName
-                    .h7.text-muted(style='font-size: 0.8rem')=p.author
+                    .h7.text-muted(style='font-size: 0.8rem')='@' + p.author
               .card-block
                 .h7.text-muted(style='font-size: 0.8rem; margin-bottom: 1rem')
                   i.fa.fa-clock-o=p.date
                   |
                 h5.card-title(style='color:#417aba')
                   b=p.title
-                p.card-text=p.text
-                  | 
+                .h7.text-muted(style='font-size: 0.7rem') 
+                  h7
+                    div
+                      b Tags: 
+                      h7= p.tags
+                  h7= '@' + p.target
+                  |
       //grupos e eventos        
       .col-md-3
         .card(style='margin-top: 1rem')  
